add stats to charts page
